<resources>
    <string name="app_name">My Application</string>
    <string name="lims_backlog">待办</string>
    <string name="lims_all">全部</string>
    <string name="lims_goods">物料</string>
    <string name="lims_batch_number">批号</string>
    <string name="lims_input_batch_number">请输入批号</string>
    <string name="lims_examiner">请检人</string>
    <string name="lims_select_requester">请选择请检人</string>
    <string name="lims_inspection_department">请检部门</string>
    <string name="lims_select_request_department">请选择请检部门</string>
    <string name="lims_time">请检时间</string>
    <string name="lims_name">名称</string>
    <string name="lims_code">编码</string>
    <string name="lims_device_name">设备名称</string>
    <string name="lims_supplier_code">客商编码</string>
    <string name="lims_materiel_name">物料名称</string>
    <string name="lims_materiel_code">物料编码</string>
    <string name="lims_document_number">单据编号</string>
    <string name="lims_request_no">检验申请单号</string>
    <string name="lims_request_reference">检验申请参照</string>
    <string name="lims_product_inspection_application">产品检验申请</string>
    <string name="lims_incoming_inspection_application">来料检验申请</string>
    <string name="lims_other_inspection_application">其他检验申请</string>
    <string name="lims_inspection_request_no">请检单号</string>
    <string name="lims_creator">制单人</string>
    <string name="lims_test_conclusion">检验结论</string>
    <string name="lims_product_inspection_report">产品检验报告</string>
    <string name="lims_incoming_inspection_report">来料检验报告</string>
    <string name="lims_other_inspection_report">其他检验报告</string>
    <string name="lims_sample">样品</string>
    <string name="lims_materiel">物料</string>
    <string name="lims_registration_time">登记时间</string>
    <string name="lims_sampling_point">采样点</string>
    <string name="lims_select_sampling_point">请选择采样点</string>
    <string name="lims_sample_name">样品名称</string>
    <string name="lims_sample_code">样品编码</string>
    <string name="lims_sample_sampling">样品取样</string>
    <string name="lims_sampling">取样</string>
    <string name="lims_sample_collection">样品收样</string>
    <string name="lims_receive">收样</string>
    <string name="lims_sample_inspection_report">样品检验报告</string>
    <string name="lims_material_name">物料名称</string>
    <string name="lims_material_reference">物料参照</string>
    <string name="lims_quality_standard">质量标准</string>
    <string name="lims_version_number">版本号</string>
    <string name="lims_executive_standards">执行标准</string>
    <string name="lims_application_scheme">请检方案</string>
    <string name="lims_customer_name">客商名称</string>
    <string name="lims_quality_standard_reference">质量标准参照</string>
    <string name="lims_sampling_point_reference">采样点参照</string>
    <string name="lims_supplier_reference">供应商参照</string>
    <string name="lims_device_type_reference">设备类型参照</string>
    <string name="lims_device_type_name">类型名称</string>
    <string name="lims_device_reference">设备参照</string>
    <string name="lims_inspection_items">检验项目</string>
    <string name="lims_inspection_items_reference">检验项目参照</string>
    <string name="lims_busitype">业务类型</string>
    <string name="lims_select_busitype">请选择业务类型</string>
    <string name="lims_inspect_quantity">请检数量</string>
    <string name="lims_material_unit">计量单位</string>
    <string name="lims_check_staff">检验人</string>
    <string name="lims_check_dept">检验部门</string>
    <string name="lims_check_time">检验时间</string>
    <string name="lims_vendor">供应商</string>
    <string name="lims_select_vendor">请选择供应商</string>
    <string name="lims_report_name">检验项目</string>
    <string name="lims_dispvalue">报出值</string>
    <string name="lims_check_result">结论</string>
    <string name="lims_test_result">检验结论</string>
    <string name="lims_range">范围</string>
    <string name="lims_sample_com">检测分项</string>
    <string name="lims_result_input">录入结果</string>
    <string name="lims_sample_separation_type">分样类型</string>
    <string name="lims_sample_type">样品类型</string>
    <string name="lims_inspection_item">检测分项</string>
    <string name="lims_keeper">保管员</string>
    <string name="lims_retain_date">留样日期</string>
    <string name="lims_retention">留样单</string>
    <string name="lims_retainqty">留样数量</string>
    <string name="lims_retain_days">留样期限</string>
    <string name="lims_valid_date">到期日期</string>
    <string name="lims_retain_staff">留样人</string>
    <string name="lims_retain_dept">留样部门</string>
    <string name="lims_storeset">存放位置</string>
    <string name="lims_record">记录查看</string>
    <string name="lims_plan_date">计划观察日期</string>
    <string name="lims_real_date">实际观察日期</string>
    <string name="lims_state">状态</string>
    <string name="lims_need_lims_check">需实验室检验</string>
    <string name="lims_material_information">物料信息</string>
    <string name="lims_num">数量</string>
    <string name="lims_select_num">请输入数量</string>
    <string name="lims_test_conclusion_cannot_be_empty">检验结论不允许为空!</string>
    <string name="lims_Inspection_item_data_of_inspection_report_cannot_be_empty">检验报告检验项目数据不能为空！</string>
    <string name="lims_inspect_project">检测项目</string>
    <string name="lims_inspect_method">检测方法</string>
    <string name="LIMSSample_sample_doNotNeedCalculate">没有需要计算的分项，请确认!</string>
    <string name="LIMSSample_sample_originValIsNull">检测分项【%1$s】重复号【%2$s】原始值为空，无法计算！</string>
    <string name="LIMSSample_sample_roundValIsNull">检测分项【%1$s】重复号【%2$s】修约值为空，无法计算！</string>
    <string name="LIMSSample_sample_dispValIsNull">检测分项【%1$s】重复号【%2$s】报出值为空，无法计算！</string>
    <string name="LIMSSample_sample_dispValTypeError">检测分项【%1$s】重复号【%2$s】报出值非数字类型，无法计算！</string>
    <string name="LIMSSample_sample_error_valueKindError">请输入数字类型！</string>
    <string name="lims_observeItem">观察项目</string>
    <string name="lims_observeValue">观察结果</string>
    <string name="lims_observeResult">结论</string>
    <string name="lims_memo">备注</string>
    <string name="lims_retention_view_record">留样观察记录</string>
    <string name="lims_observer_plan">观察计划</string>
    <string name="lims_expand">展开全部</string>
    <string name="lims_shrink">收起全部</string>
    <string name="lims_deal">处理成功</string>
    <string name="lims_save">保存</string>
    <string name="lims_submit">提交</string>
    <string name="lims_saving">保存中...</string>
    <string name="lims_submitting">提交中...</string>
    <string name="lims_reject">驳回中...</string>
    <string name="lims_cancellation">作废中...</string>
    <string name="lims_calculation">计算</string>
    <string name="lims_parallelNo">重复号</string>
    <string name="lims_originValue">原始值</string>
    <string name="lims_roundValue">修约值</string>
    <string name="lims_dispValue">报出值</string>
    <string name="lims_enclosure">附件</string>
    <string name="lims_equipment_type">设备类型</string>
    <string name="lims_equipment_code">设备编码</string>
    <string name="lims_equipment_name">设备名称</string>
    <string name="lims_acquisition_mode_">采集方式</string>
    <string name="lims_matCode">编号</string>
    <string name="lims_useQty">用量</string>
    <string name="lims_produce_batch">生产批号</string>
    <string name="lims_device_check">设备中存在未选择的设备编码!</string>
    <string name="lims_material_check">材料中存在未输入的用量!</string>
    <string name="lims_delete">删除</string>
    <string name="lims_project_check">提交的分项中存在报出值为空的项目，是否继续提交并设置报出值为未检？</string>
    <string name="lims_project_check_change">您未修改任何数据，无需保存!</string>
    <string name="lims_not_calculation_formula">暂无计算公式!</string>
    <string name="lims_not_file">没有可查看的文件!</string>
    <string name="lims_not_scanned_code">并未扫描到匹配的编码!</string>
    <string name="lims_select_one_operate">请先选中一条记录进行操作!</string>
    <string name="lims_project">项目</string>
    <string name="lims_equipment">设备</string>
    <string name="lims_material">材料</string>
    <string name="lims_select_sample">请选择要收样的样品!</string>
    <string name="lims_sample_collection_process">收样中...</string>
    <string name="lims_submit_succeed">提交成功</string>
    <string name="lims_enclosure_list">附件列表</string>
    <string name="lims_sample_report">样品报告单</string>
    <string name="lims_sampling_process">取样中...</string>
    <string name="lims_select_sampling_sample">请选择要取样的样品!</string>
    <string name="lims_input_original_value">请输入原始值</string>
    <string name="lims_input_reported_value">请输入报出值</string>
    <string name="lims_not_content">没有更多展开的内容了!</string>
    <string name="lims_material_reagent_reference">材料试剂参照</string>
    <string name="lims_loading_succeed">加载成功</string>
    <string name="lims_loading_sample">正在加载样品...</string>
    <string name="lims_please_select_material">请选择物料!</string>
    <string name="lims_please_select_quality_standard">请选择质量标准!</string>
    <string name="lims_to_void">作废</string>
    <string name="lims_to_void_bill">确认要作废单据吗？</string>
    <string name="lims_adopt">通过</string>
    <string name="reject">驳回</string>
    <string name="review">复核</string>
    <string name="refuse">拒绝</string>
    <string name="reviewing">复核中...</string>
    <string name="refusing">拒绝中...</string>
    <string name="lims_product_test_request_bill">产品检验申请单</string>
    <string name="lims_incoming_test_request_bill">来料检验申请单</string>
    <string name="lims_other_test_request_bill">其他检验申请单</string>
    <string name="lims_product_test_report">产品检验报告单</string>
    <string name="lims_incoming_test_report">来料检验报告单</string>
    <string name="lims_other_test_report">其他检验报告单</string>
    <string name="lims_inspection_application_detail_tips_1">获取质量标准对应的检验方案失败!</string>
    <string name="lims_inspection_application_detail_tips_2">无法获取默认质量标准对应的检验项目!</string>
    <string name="lims_inspection_application_detail_tips_3">无法获取默认质量标准!</string>
    <string name="lims_inspection_application_detail_tips_4">获取可用标准失败!</string>
    <string name="lims_inspection_application_detail_tips_5">物料未被样品模板关联，无法参照!</string>
    <string name="lims_inspection_application_detail_tips_6">质量标准不允许为空!</string>
    <string name="lims_inspection_application_detail_tips_7">批号不允许为空!</string>
    <string name="lims_inspection_application_detail_tips_8">物料不允许为空!</string>
    <string name="lims_inspection_application_detail_tips_9">请检时间不允许为空!</string>
    <string name="lims_inspection_application_detail_tips_10">请检部门不允许为空!</string>
    <string name="lims_inspection_application_detail_tips_11">请检人不允许为空!</string>
    <string name="lims_inspection_application_detail_tips_12">业务类型不允许为空!</string>
    <string name="lims_inspection_request_no_cannot_be_blank">检验申请单号不允许为空!</string>
    <string name="lims_inspection_report_inspector_cannot_be_empty">检验人不允许为空!</string>
    <string name="lims_inspection_report_inspection_department_cannot_be_empty">检验部门不允许为空!</string>
    <string name="lims_inspection_report_inspection_time_cannot_be_empty">检验时间不允许为空!</string>
    <string name="lims_inspection_application_detail_tips_13">第【%1$s】条质量标准中的检验项目不允许为空!</string>
    <string name="lims_service_not_exist">抱歉，服务不存在或者未启动!</string>
    <string name="lims_open_camera">请打开相机权限!</string>
    <string name="lims_upload_file">正在上传文件...</string>
    <string name="lims_upload_succeed">上传成功</string>
    <string name="lims_unqualified">不合格</string>
    <string name="lims_specifications">规格</string>
    <string name="lims_model">型号</string>
    <string name="lims_load_fail">未加载到该样品!</string>
    <string name="lims_edit">编辑</string>
    <string name="lims_approve">审核</string>
    <string name="lims_effect">生效</string>
    <string name="lims_refresnce">参照</string>
    <string name="lims_add">增加</string>
    <string name="lime_device_status">设备状态</string>
    <string name="lims_devies">设备列表</string>
    <string name="lims_materils">物料列表</string>
    <string name="lims_material_list">材料列表</string>
    <string name="lims_add_succeed">添加成功</string>
    <string name="lims_add_succeed_filter_repeat_data">添加成功!已过滤重复数据!</string>
    <string name="lims_please_select_at_last_one_data">请至少选择一条数据!</string>
    <string name="lims_please_select_one_data_or_look">请选择一行记录进行查看!</string>
    <string name="lims_status_not">状态非已观察，不允许查看!</string>
</resources>