<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff9f9f9"
    android:orientation="vertical">


    <com.supcon.mes.mbap.view.CustomTextView
        android:id="@+id/ctTestRequestNo"
        style="@style/yh_custom_view_horizontal_style"
        android:tag="ctTestRequestNo"
        app:gravity="right|center_vertical"
        app:text="@string/lims_request_no"
        app:text_color="@color/font_333333" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ffdcdcdc" />

    <com.supcon.mes.mbap.view.CustomTextView
        android:id="@+id/ctBusinessType"
        style="@style/yh_custom_view_horizontal_style"
        android:tag="ctBusinessType"
        app:gravity="right|center_vertical"
        app:text="@string/lims_busitype"
        app:text_color="@color/font_333333" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ffdcdcdc" />

    <com.supcon.mes.mbap.view.CustomTextView
        android:id="@+id/ctMateriel"
        style="@style/yh_custom_view_horizontal_style"
        android:tag="ctMateriel"
        app:gravity="right|center_vertical"
        app:text="@string/lims_materiel"
        app:text_color="@color/font_333333" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ffdcdcdc" />

    <com.supcon.mes.mbap.view.CustomTextView
        android:id="@+id/ctBatchNumber"
        style="@style/yh_custom_view_horizontal_style"
        android:tag="ctBatchNumber"
        app:gravity="right|center_vertical"
        app:text="@string/lims_batch_number"
        app:text_color="@color/font_333333" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ffdcdcdc" />

    <com.supcon.mes.mbap.view.CustomSpinner
        android:id="@+id/csTestConclusion"
        style="@style/yh_custom_view_horizontal_style"
        android:tag="csTestConclusion"
        app:editable="true"
        app:gravity="right|center_vertical"
        app:key="@string/lims_test_conclusion"
        app:text_color="@color/font_333333" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ffdcdcdc" />

    <com.supcon.mes.mbap.view.CustomTextView
        android:id="@+id/ctQualityStd"
        style="@style/yh_custom_view_horizontal_style"
        android:tag="ctQualityStd"
        app:editable="true"
        app:gravity="right|center_vertical"
        app:text="@string/lims_quality_standard"
        app:text_color="@color/font_333333" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ffdcdcdc" />


    <com.supcon.mes.mbap.view.CustomTextView
        android:id="@+id/ctTestPeople"
        style="@style/yh_custom_view_horizontal_style"
        android:tag="ctTestPeople"
        app:editable="true"
        app:gravity="right|center_vertical"
        app:text="@string/lims_check_staff"
        app:text_color="@color/font_333333" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ffdcdcdc" />

    <com.supcon.mes.mbap.view.CustomTextView
        android:id="@+id/ctTestDepartment"
        style="@style/yh_custom_view_horizontal_style"
        android:tag="ctTestDepartment"
        app:editable="true"
        app:gravity="right|center_vertical"
        app:text="@string/lims_check_dept"
        app:text_color="@color/font_333333" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ffdcdcdc" />

    <com.supcon.mes.mbap.view.CustomDateView
        android:id="@+id/cdTestTime"
        style="@style/yh_custom_view_horizontal_style"
        android:tag="cdTestTime"
        app:gravity="right|center_vertical"
        app:text="@string/lims_check_time"
        app:text_color="@color/editableTextColor" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ffdcdcdc" />


    <LinearLayout
        android:id="@+id/ll_other_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:tag="ll_other_info"
        android:visibility="gone">


        <com.supcon.mes.mbap.view.CustomTextView
            android:id="@+id/ctGetPoint"
            style="@style/yh_custom_view_horizontal_style"
            android:tag="ctGetPoint"
            app:gravity="right|center_vertical"
            app:text="@string/lims_sampling_point"
            app:text_color="@color/font_333333" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ffdcdcdc" />

        <com.supcon.mes.mbap.view.CustomTextView
            android:id="@+id/ctUnit"
            style="@style/yh_custom_view_horizontal_style"
            android:tag="ctUnit"
            app:gravity="right|center_vertical"
            app:text="@string/lims_material_unit"
            app:text_color="@color/font_333333" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ffdcdcdc" />

        <com.supcon.mes.mbap.view.CustomTextView
            android:id="@+id/ctTestNumber"
            style="@style/yh_custom_view_horizontal_style"
            android:tag="ctTestNumber"
            app:gravity="right|center_vertical"
            app:text="@string/lims_inspect_quantity"
            app:text_color="@color/font_333333" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ffdcdcdc" />

        <com.supcon.mes.mbap.view.CustomTextView
            android:id="@+id/ctRequestTestDepartment"
            style="@style/yh_custom_view_horizontal_style"
            android:tag="ctRequestTestDepartment"
            app:gravity="right|center_vertical"
            app:text="@string/lims_inspection_department"
            app:text_color="@color/font_333333" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ffdcdcdc" />


            <com.supcon.mes.mbap.view.CustomTextView
                android:id="@+id/ctSupplier"
                style="@style/yh_custom_view_horizontal_style"
                android:tag="ctSupplier"
                app:editable="false"
                app:gravity="right|center_vertical"
                app:text="@string/lims_vendor"
                app:text_color="@color/font_333333" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#ffdcdcdc" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/expandTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_15"
            android:tag="expandTv"
            android:text="@string/lims_expand" />

        <ImageView
            android:id="@+id/imageUpDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_toRightOf="@+id/expandTv"
            android:paddingTop="@dimen/dp_5"
            android:paddingBottom="@dimen/dp_5"
            android:src="@drawable/ic_drop_down"

            android:tag="imageUpDown" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:background="#F9F9F9"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_15">

        <View
            android:layout_width="3dp"
            android:layout_height="@dimen/dp_14"
            android:background="#009AFC" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/lims_inspection_items"
            android:textColor="#333333"
            android:textSize="@dimen/fontSize_14sp" />

        <LinearLayout
            android:id="@+id/llReference"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:layout_marginRight="@dimen/dp_10"
            android:orientation="horizontal"
            android:tag="llReference">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lims_reference" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/font_333333"
                android:textSize="@dimen/fontSize_12sp"
                android:layout_marginLeft="@dimen/dp_5"
                android:text="@string/lims_refresnce" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff8f8f8"
        android:paddingStart="11dp"
        android:paddingEnd="12dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/contentView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbars="none"
            android:tag="contentView" />
    </RelativeLayout>


</LinearLayout>