<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:core_ptr="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff9f9f9"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/ly_titlebar" />

    <com.supcon.common.view.ptr.PtrFrameLayout
        android:id="@+id/refreshFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/customWorkFlowView"
        android:layout_marginTop="@dimen/dp_50"
        android:tag="refreshFrameLayout"
        core_ptr:ptr_keep_header_when_refresh="true"
        core_ptr:ptr_pull_to_fresh="false"
        core_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
        core_ptr:ptr_resistance="1.7">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/ns_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="none"
            android:tag="ns_scroll">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_30"
                    android:background="#F9F9F9"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/dp_15">

                    <View
                        android:layout_width="3dp"
                        android:layout_height="@dimen/dp_14"
                        android:background="#009AFC" />

                    <TextView
                        android:id="@+id/inspectNoTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:tag="inspectNoTv"
                        android:text=""
                        android:textColor="#333333"
                        android:textSize="@dimen/fontSize_14sp" />

                </LinearLayout>

                <com.supcon.mes.mbap.view.CustomTextView
                    android:id="@+id/inspectbusiTypeTv"
                    style="@style/yh_custom_view_horizontal_style"
                    android:tag="inspectbusiTypeTv"
                    app:gravity="right|center_vertical"
                    app:text="@string/lims_busitype"
                    app:text_color="@color/font_333333" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#ffdcdcdc" />

                <com.supcon.mes.mbap.view.CustomTextView
                    android:id="@+id/inspectPsTv"
                    style="@style/yh_custom_view_horizontal_style"
                    android:tag="inspectPsTv"
                    app:gravity="right|center_vertical"
                    app:text="@string/lims_sampling_point"
                    app:text_color="@color/font_333333" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#ffdcdcdc" />

                <com.supcon.mes.mbap.view.CustomTextView
                    android:id="@+id/inspectMaterielTv"
                    style="@style/yh_custom_view_horizontal_style"
                    android:tag="inspectMaterielTv"
                    app:gravity="right|center_vertical"
                    app:text="@string/lims_materiel"
                    app:text_color="@color/font_333333" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#ffdcdcdc" />

                <com.supcon.mes.mbap.view.CustomTextView
                    android:id="@+id/inspectUnitTv"
                    style="@style/yh_custom_view_horizontal_style"
                    android:tag="inspectUnitTv"
                    app:gravity="right|center_vertical"
                    app:text="@string/lims_material_unit"
                    app:text_color="@color/font_333333" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#ffdcdcdc" />

                <com.supcon.mes.mbap.view.CustomTextView
                    android:id="@+id/inspectBatchTv"
                    style="@style/yh_custom_view_horizontal_style"
                    android:tag="inspectBatchTv"
                    app:gravity="right|center_vertical"
                    app:text="@string/lims_batch_number"
                    app:text_color="@color/font_333333" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#ffdcdcdc" />

                <com.supcon.mes.mbap.view.CustomTextView
                    android:id="@+id/inspectQuantityTv"
                    style="@style/yh_custom_view_horizontal_style"
                    android:tag="inspectQuantityTv"
                    app:gravity="right|center_vertical"
                    app:text="@string/lims_inspect_quantity"
                    app:text_color="@color/font_333333" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#ffdcdcdc" />

                <com.supcon.mes.mbap.view.CustomTextView
                    android:id="@+id/inspectDeptTv"
                    style="@style/yh_custom_view_horizontal_style"
                    android:tag="inspectDeptTv"
                    app:gravity="right|center_vertical"
                    app:text="@string/lims_inspection_department"
                    app:text_color="@color/font_333333" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#ffdcdcdc" />

                <com.supcon.mes.mbap.view.CustomTextView
                    android:id="@+id/inspectCheckStaffTv"
                    style="@style/yh_custom_view_horizontal_style"
                    android:tag="inspectCheckStaffTv"
                    app:gravity="right|center_vertical"
                    app:text="@string/lims_check_staff"
                    app:text_color="@color/font_333333" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#ffdcdcdc" />

                <com.supcon.mes.mbap.view.CustomTextView
                    android:id="@+id/inspectCheckDeptTv"
                    style="@style/yh_custom_view_horizontal_style"
                    android:tag="inspectCheckDeptTv"
                    app:gravity="right|center_vertical"
                    app:text="@string/lims_check_dept"
                    app:text_color="@color/font_333333" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#ffdcdcdc" />

                <com.supcon.mes.mbap.view.CustomTextView
                    android:id="@+id/inspectCheckTimeTv"
                    style="@style/yh_custom_view_horizontal_style"
                    android:tag="inspectCheckTimeTv"
                    app:gravity="right|center_vertical"
                    app:text="@string/lims_check_time"
                    app:text_color="@color/font_333333" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#ffdcdcdc" />

                <com.supcon.mes.mbap.view.CustomTextView
                    android:id="@+id/inspectQualityStdTv"
                    style="@style/yh_custom_view_horizontal_style"
                    android:tag="inspectQualityStdTv"
                    app:gravity="right|center_vertical"
                    app:text="@string/lims_quality_standard"
                    app:text_color="@color/font_333333" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#ffdcdcdc" />

                <com.supcon.mes.mbap.view.CustomTextView
                    android:id="@+id/inspectCheckResultTv"
                    style="@style/yh_custom_view_horizontal_style"
                    android:tag="inspectCheckResultTv"
                    app:gravity="right|center_vertical"
                    app:text="@string/lims_test_conclusion"
                    app:text_color="@color/font_333333" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#ffdcdcdc" />

                <com.supcon.mes.mbap.view.CustomTextView
                    android:id="@+id/inspectVendorTv"
                    style="@style/yh_custom_view_horizontal_style"
                    android:tag="inspectVendorTv"
                    android:visibility="gone"
                    app:gravity="right|center_vertical"
                    app:text="@string/lims_vendor"
                    app:text_color="@color/font_333333" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_30"
                    android:background="#F9F9F9"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/dp_15">

                    <View
                        android:layout_width="3dp"
                        android:layout_height="@dimen/dp_14"
                        android:background="#009AFC" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="检验项目"
                        android:textColor="#333333"
                        android:textSize="@dimen/fontSize_14sp" />
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff8f8f8"
                    android:paddingStart="11dp"
                    android:paddingTop="9dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="13dp">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/contentView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:overScrollMode="never"
                        android:scrollbars="none"
                        android:tag="contentView" />
                </RelativeLayout>
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
    </com.supcon.common.view.ptr.PtrFrameLayout>
    <com.supcon.mes.mbap.view.CustomWorkFlowView
        android:id="@+id/customWorkFlowView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_alignParentBottom="true"
        android:tag="customWorkFlowView"
        app:commentable="false" />

</RelativeLayout>